// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthService should return a token when user log in 1`] = `
Object {
  "data": Object {
    "token": "123.123.123.123",
  },
  "errors": null,
}
`;

exports[`AuthService should return an user when user register 1`] = `
Object {
  "data": Object {
    "email": "igor@igor.me",
    "name": "Igor",
    "password": "123",
  },
  "errors": null,
}
`;
